# moocow-color-tool

./: CHANGELOG.md  DEPLOYMENT.md  LICENSE  MANUAL_DEPLOY.md  README.md  STEP_BY_STEP_DEPLOY.md  THIRD_PARTY_NOTICES.md  index.html  index_backup.html  index_backup_v7.0.html  index_backup_v7.1.html  index_backup_v7.2.html  index_backup_v8.1.html  index_backup_v8.2_20251011.html  index_fixed_v2.html  index_v6.6_mobile_optimized.html  index_v8.0_complete.html  package.json
calibration/: README.md  pyproject.toml
calibration/km_calibration/: __init__.py  acquisition_preflight.py  cli.py  diagnostic.py  errors.py  evidence.py  hashing.py  independent_holdout_activation.py  km.py  open_measurement_admission.py  open_measurement_pack.py  open_selection_fit_export.py  open_selection_recipe_solver.py  pilot.py  pipeline.py  schema.py  synthetic.py
calibration/protocols/: current-batch-component-registry-v1.json  measurement-record-template-v1.json  physical-drawdown-v1.md
calibration/tests/: acquisition_preflight_fixtures.py  independent_holdout_activation_fixtures.py  open_measurement_admission_fixtures.py  open_selection_fit_export_fixtures.py  test_acquisition_package_prepare.py  test_acquisition_preflight_cli.py  test_acquisition_preflight_integration.py  test_acquisition_preflight_unit.py  test_diagnostic_import.py  test_independent_holdout_activation.py  test_km_calibration.py  test_open_measurement_admission.py  test_open_measurement_pack.py  test_open_selection_fit_export.py  test_open_selection_recipe_solver.py  test_pilot_holdout.py
data/: qtc-ral-classic.json  (+1 more)
(+95 files in other folders)
