[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moocow-km-calibration"
version = "0.1.0"
description = "Receipt-gated finite-film two-constant Kubelka-Munk calibration tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0,<3",
  "scipy>=1.12,<2",
  "cryptography>=46,<47",
]

[project.scripts]
moocow-km-calibration = "km_calibration.cli:main"

[tool.setuptools]
packages = ["km_calibration"]
